2012-02-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.43 (tag v0.43)

2012-02-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Use a funky table name to exercise ‘validate-def’ a bit.

	* types-table.scm (test-m2): Change table name to ‘abstr∀ctions-2’.

2012-02-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add support for ‘make delete-cluster’.

	* Makefile.am (delete-cluster): New target.
	(clean-local): Don't depend on ‘kill-daemon’; instead,
	depend on ‘delete-cluster’ and remove rm(1) invocation.

2012-02-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Use a funky column name to exercise ‘validate-def’ a bit.

	* types-table.scm (test-m2): Change
	name of first column from ‘n’ to ‘∑╌’.

2012-02-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Set client encoding to UTF-8 explicitly for types/table tests.

	* types-table.scm (mgr try!): New proc.
	(mgr): Set client encoding to UTF-8; if not successful
	or if verification fails, exit failurefully.

2012-02-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres-qcons) proc: string-xrep

	* types-table.scm: Import SRFI 13, SRFI 14.
	(POISON): Include the xrep of the ‘cddr’ slice of ‘PESKY’.
	(POISON-COUNTS): Adjust char and byte counts.

2012-02-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[qcons] Fix bug: Make ‘sql-quote’ do backslash octal substitution.

	* Makefile.am (XFAIL_TESTS): Remove types-table.scm.

2012-02-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Expand ‘string’ round-trip test; mark xfail.

	* types-table.scm (PESKY): Add U+5C REVERSE SOLIDUS,
	U+22 QUOTATION MARK, U+7 BELL, U+C FORM FEED, U+A LINE FEED,
	U+D CARRIAGE RETURN, U+9 CHARACTER TABULATION, U+B LINE
	TABULATION, U+13 DEVICE CONTROL THREE, U+232C BENZENE RING,
	U+18 CANCEL, U+20 SPACE, plus eight two-char sequences made
	of ‘\’ followed by ‘[\"afnrtv]’.
	* Makefile.am (XFAIL_TESTS): New var.

2012-02-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add test to validate ‘string’ round-trip integrity.
